refactor: use enhanced switch